# rust-utils

./: .gitignore  Cargo.toml  README.md
.zed/: tasks.json
examples/: enum_iter.rs
joy-collection-utils/: Cargo.toml
joy-collection-utils/src/: lib.rs
joy-error/: Cargo.toml
joy-error/examples/: infallible.rs
joy-error/src/: lib.rs  option.rs
joy-error/src/log/: log_crate.rs  mod.rs  tracing_crate.rs
joy-impl-ignore/: Cargo.toml
joy-impl-ignore/src/: debug.rs  eq.rs  lib.rs
joy-iter/: Cargo.toml
joy-iter/src/: lib.rs  zip_self.rs
joy-macro/: Cargo.toml
joy-macro/examples/: display_from_debug.rs  enum_iter.rs  enum_str.rs  enum_value.rs  struct_new.rs
joy-macro/src/: display_from_debug.rs  enum_iter.rs  enum_str.rs  enum_value.rs  lib.rs  struct_new.rs  utils.rs
joy-value-object/: Cargo.toml
joy-value-object/src/: lib.rs
joy-vector/: Cargo.toml
joy-vector/examples/: gen.rs
joy-vector/src/: gen.rs  lib.rs
old-macro/: Cargo.toml
old-macro/examples/: enum_str.rs  enum_value.rs  struct_new.rs
old-macro/src/: enum_value.rs  lib.rs  utils.rs
rust-utils/: Cargo.toml
rust-utils-macro/: Cargo.toml
rust-utils-macro/examples/: enum_iter.rs  enum_str.rs  enum_value.rs  struct_getter.rs  struct_new.rs
rust-utils-macro/src/: enum_str.rs  enum_value.rs  lib.rs  struct_getter.rs  struct_new.rs  utils.rs
rust-utils/examples/: collection.rs  collections.rs  number.rs  transform.rs  value_object.rs  vector.rs  zip_self.rs
rust-utils/src/: collection.rs  lib.rs  number.rs  transform.rs  vector.rs  (+1 more)
src/: lib.rs
wip-utils/: Cargo.toml
(+5 files in other folders)
