[package]
name = "joy-error"
version = "0.5.0"
edition = "2021"

[dependencies]
log = { version = "0", optional = true }
tracing = { version = "0", optional = true }
anyhow = { version = "1", optional = true }
easy-ext = "1"

[features]
default = []
tracing-crate = ["dep:tracing"]
log-crate = ["dep:log"]
anyhow-crate = ["dep:anyhow"]
